--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">AdobePassClientlessRefApp</string>
     <string name="action_settings">Settings</string>
+    <string name="is_signed_in">isSignedIn</string>
+    <string name="logout">logout</string>
+    <string name="login">login</string>
+    <string name="login_temp_pass">loginTempPass</string>
+    <string name="login_header">Sign In / Login</string>
+    <string name="get_mvpd_list">getMvpdList</string>
+    <string name="authorize">Authorize</string>
+    <string name="ok">OK</string>
+    <string name="back">BACK</string>
 </resources>
