--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="authorize">Authorize</string>
     <string name="ok">OK</string>
     <string name="back">BACK</string>
+    <string name="about_clientless">About Clientless</string>
 </resources>
