--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,25 @@
     <string name="authForm16_externalBrowserDomains">externalBrowserDomains: </string>
     <string name="authForm17_nbcTokenUrl">nbcTokenUrl: </string>
 
+    <string name="auth1_baseUrl">baseUrl</string>
+    <string name="auth2_reggieCodePath">reggieCodePath</string>
+    <string name="auth3_checkAuthenticationPath">checkAuthenticationPath</string>
+    <string name="auth4_authnTokenTimeoutSeconds">authnTokenTimeoutSeconds</string>
+    <string name="auth5_tempPassProvider">tempPassProvider</string>
+    <string name="auth6_getUserMetadataPath">getUserMetadataPath</string>
+    <string name="auth7_authnTokenPath">authnTokenPath</string>
+    <string name="auth8_tempPassUrl">tempPassUrl</string>
+    <string name="auth9_authzTokenPath">authzTokenPath</string>
+    <string name="auth10_authorizePath">authorizePath</string>
+    <string name="auth11_logoutPath">logoutPath</string>
+    <string name="auth12_mvpdListPath">mvpdListPath</string>
+    <string name="auth13_redirectUrl">redirectUrl</string>
+    <string name="auth14_tokenizationUrl">tokenizationUrl</string>
+    <string name="auth15_logosUrl">logosUrl</string>
+    <string name="auth16_externalBrowserDomains">externalBrowserDomains</string>
+    <string name="auth17_nbcTokenUrl">nbcTokenUrl</string>
+    <string name="auth18_tempPassSelection">tempPassSelection</string>
+
     <!--adobe auth parcel data-->
     <!--@Expose @Getter String baseUrl;-->
     <!--@Expose @Getter String reggieCodePath;-->
