Given an mvpdId, login now works and will show the webview of the mvpd. Logging in with proper creds will return a success call.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,7 @@
     <!--@Expose @Getter String nbcTokenUrl;-->
     <!--@Expose @Getter-->
     <!--TempPassSelectionConfig tempPassSelection;-->
+
+    <string name="login_description"> Description of login here </string>
+
 </resources>
