If there is unsaved data in adobe auth set up page, BACK button will prompt user if they really want to go back to main activity without saving. Toasts will also prompt users and prevent them from saving if there is unfilled fields in the form.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,6 @@
     <!--TempPassSelectionConfig tempPassSelection;-->
 
     <string name="login_description"> Description of login here </string>
+    <string name="auth_setup_unsaved_data">"There is unsaved data. Are you sure you want to Exit Adobe Auth Setup?"</string>
 
 </resources>
