Fixed crash that happens whenever network is being used but there is no internet connection.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
 
     <string name="login_description"> Description of login here </string>
     <string name="auth_setup_unsaved_data">"There is unsaved data. Are you sure you want to Exit Adobe Auth Setup?"</string>
+    <string name="no_internet_toast">Error: No Internet Connection</string>
 
 </resources>
