Converted adobe auth activity to use hashmap.  Added missing adobe auth form value tempPassSelection. Refactored SetUpUtils by removing methods that used the value names string array.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="authForm15_logosUrl">logosUrl: </string>
     <string name="authForm16_externalBrowserDomains">externalBrowserDomains: </string>
     <string name="authForm17_nbcTokenUrl">nbcTokenUrl: </string>
+    <string name="authForm18_tempPassSelection">tempPassSelection: </string>
 
     <string name="auth1_baseUrl">baseUrl</string>
     <string name="auth2_reggieCodePath">reggieCodePath</string>
